--- a/src/HeatMap/Pages/Index.razor
+++ b/src/HeatMap/Pages/Index.razor
@@ -17,6 +17,7 @@
             <th scope="col">Status</th>
             <th scope="col">Threshold</th>
             <th scope="col">Zone</th>
+            <th scope="col">SMS Status</th>
         </tr>
     </thead>
     <tbody>
@@ -28,6 +29,7 @@
             <td>@chore.Status</td>
             <td>@chore.Threshold</td>
             <td>@chore.ZoneId</td>
+            <td>@chore.SmsStatus</td>
         </tr>
         }
     </tbody>
@@ -39,6 +41,14 @@
     private string _refreshUrl = "http://localhost:7071/api/NotifyHttp";
 
     public List<Chore> Chores { get; set; } = new List<Chore>();
+
+    private void RemoveExistingChoreFromList(string choreId)
+    {
+        if(Chores.Any(x => x.ChoreId == choreId))
+        {
+            Chores.RemoveAll(x => x.ChoreId == choreId);
+        }
+    }
 
     protected override async Task OnInitializedAsync()
     {
@@ -53,11 +63,27 @@
 
         connection.On<Chore>("choreStatusUpdated", (chore) => 
         {
-            if(Chores.Any(x => x.Message == chore.Message))
-            {
-                Chores.RemoveAll(x => x.Message == chore.Message);
-            }
+            RemoveExistingChoreFromList(chore.ChoreId);
+            Chores.Add(chore);
+            Chores = Chores.OrderBy(x => x.AssignedTo).ThenBy(x => x.Message).ToList();
 
+            StateHasChanged();
+        });
+
+        connection.On<Chore>("textingChoreAssignee", (chore) => 
+        {
+            RemoveExistingChoreFromList(chore.ChoreId);
+            chore.SmsStatus = $"Texting {chore.AssignedTo} a reminder";
+            Chores.Add(chore);
+            Chores = Chores.OrderBy(x => x.AssignedTo).ThenBy(x => x.Message).ToList();
+
+            StateHasChanged();
+        });
+
+        connection.On<Chore>("choreAssigneeTexted", (chore) => 
+        {
+            RemoveExistingChoreFromList(chore.ChoreId);
+            chore.SmsStatus = $"Reminder sent at {DateTime.Now.ToShortTimeString()}";
             Chores.Add(chore);
             Chores = Chores.OrderBy(x => x.AssignedTo).ThenBy(x => x.Message).ToList();
 
