Blob Trigger for Notify Function

--- a/src/HeatMap/Pages/Admin-Chores.razor
+++ b/src/HeatMap/Pages/Admin-Chores.razor
@@ -36,14 +36,14 @@
 
 
 @code {
-    private string _functionUrl = "http://localhost:7073/api/getChores";
+    private string _functionUrl = "https://chores-iot.azurewebsites.net/api/getChores";
 
     public List<Chore> Chores { get; set; } = new List<Chore>();
 
     protected override async Task OnInitializedAsync()
     {
         var result = await Http.GetFromJsonAsync<ChoreListData>(_functionUrl);
-        
+
         Chores = result.Chores;
 
         StateHasChanged();
