e2e widget and heatmap working

--- a/src/HeatMap/Pages/Widget.razor
+++ b/src/HeatMap/Pages/Widget.razor
@@ -2,17 +2,30 @@
 @using System.Threading.Tasks
 @using System.Net.Http;
 @using System.Net.Http.Headers;
-@page "/"
+@page "/widget"
 @layout WidgetLayout
 @inject HttpClient Http
 
-<div class="home">
+<div class="row">
 @foreach (var chore in Chores)
 {
-    <img src="@chore.HeatMapIcon()" class="@chore.ZoneId">
+    <div class="col">
+        <div class="row">
+            <div class="col text-center">
+                <img src="@chore.WidgetIcon()" alt="Status">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="text-center">@chore.ZoneId</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-center">@chore.SmsStatus</div>
+        </div>
+    </div>
 }
 </div>
-
 
 @code {
     private string _hubConnectionUrl = "http://localhost:7071/api";
@@ -25,17 +38,20 @@
             Chores.RemoveAll (x => x.ChoreId == choreId);
         }
     }
+
     private async Task Preload () {
         var result = await Http.GetFromJsonAsync<ChoreListData> (_functionUrl);
         Chores = result.Chores;
         StateHasChanged ();
     }
+
     private void Reload(Chore chore) {
         RemoveExistingChoreFromList (choreId: chore.ChoreId);
         Chores.Add (chore);
         Chores = Chores.OrderBy (x => x.AssignedTo).ThenBy (x => x.Message).ToList ();
         StateHasChanged();
     }
+
     protected override async Task OnInitializedAsync () {
         await Preload ();
 
