--- a/src/HeatMap/wwwroot/css/app.css
+++ b/src/HeatMap/wwwroot/css/app.css
@@ -28,6 +28,8 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-color: transparent;
+    color: #fff;
 }
 
 a, .btn-link {
